Terminate Process tree when killing a process inside a container
[#91874974]

Signed-off-by: Ben_Moss <bmoss@pivotal.io>

--- a/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
+++ b/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.8.1.0\lib\net45\NSubstitute.dll</HintPath>
     </Reference>
