--- a/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
+++ b/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ContainerServiceAcceptanceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSupport\FactAdminRequired.cs" />
+    <Compile Include="TestSupport\ProcessInfoHelper.cs" />
     <Compile Include="TestSupport\RandomFactory.cs" />
     <Compile Include="TestSupport\TestProcessIO.cs" />
   </ItemGroup>
