Update the relationship between the Guard and IronFrame
- IronFrame no longer keeps a handle for the Guard.
- The Guard releases the handle on the container job after each cycle, it does this to avoid
  the Guard keeping the container alive in the event that IronFrame crashes.
- The Guard will respond to the container job no longer existing by exiting

Signed-off-by: Stefan_Schneider <stefan.schneider@hp.com>

--- a/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
+++ b/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
@@ -63,6 +63,7 @@
     </Compile>
     <Compile Include="ContainerAcceptanceTests.cs" />
     <Compile Include="ContainerServiceAcceptanceTests.cs" />
+    <Compile Include="GuardAcceptanceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSupport\FactAdminRequired.cs" />
     <Compile Include="TestSupport\ProcessInfoHelper.cs" />
