Make the project a console-less exe
This will avoid the console popup when ran from an
interactive session, and also get rid of the extra
conhost process asscociated with the console.

--- a/IronFrame.Host/IronFrame.Host.csproj
+++ b/IronFrame.Host/IronFrame.Host.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6E4DD8FC-91E8-4C70-946D-4C37DF84C8CF}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IronFrame.Host</RootNamespace>
     <AssemblyName>IronFrame.Host</AssemblyName>
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NDesk.Options">
