--- a/IronFrame/IronFrame.csproj
+++ b/IronFrame/IronFrame.csproj
@@ -61,6 +61,7 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="BindMount.cs" />
+    <Compile Include="ContainerDirectoryFactory.cs" />
     <Compile Include="ContainerHandleHelper.cs" />
     <Compile Include="ContainerInfo.cs" />
     <Compile Include="ContainerMetrics.cs" />
