Enable running containerizer as SYSTEM user
The C# Process object uses CreateProcessWithLogonW to create a process
as another user. Unfortunately this does not work as the SYSTEM user.

Given a number of frustrations we've had with running as a dedicated
administrator account (complex passwords, domain joined admins, etc.),
we decided to remove this requirement.

We now use CreateProcessAsUser to spawn the IronFrame.Host via a new
ImpersonationProcessRunner. CreateProcessAsUser may be used by the
SYSTEM user, as well as an administrator who has been granted "Replace a
process level token" policy.

Note that the IronFrame.Host job object is no longer initialized with a
name. This is due to the fact that named job objects require access to
the BaseNamedObjects directory for the current session. Under normal
circumstances, the Everyone group does not have access to this directory
for the current interactive session. Given the name is not needed, it
was removed.

[#114826119]

Signed-off-by: Ben Moss <bmoss@pivotal.io>
Signed-off-by: Amin Jamali <ajamali@pivotal.io>

--- a/IronFrame.Shared/IronFrame.Shared.csproj
+++ b/IronFrame.Shared/IronFrame.Shared.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>IronFrame.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -76,6 +78,10 @@
     <Compile Include="Utilities\ProcessDataReceivedEventArgs.cs" />
     <Compile Include="Utilities\ProcessHelper.cs" />
     <Compile Include="Utilities\SafeJobObjectHandle.cs" />
+    <Compile Include="Win32\EnvironmentBlock.cs" />
+    <Compile Include="Win32\CreatePipe.cs" />
+    <Compile Include="Win32\CreateProcessAsUser.cs" />
+    <Compile Include="Win32\ProcessInformation.cs" />
     <Compile Include="Win32\SecurityAttributes.cs" />
     <Compile Include="Utilities\ProcessRunner.cs" />
     <Compile Include="Messaging\JsonRpcRequest.cs" />
@@ -104,8 +110,11 @@
     <Compile Include="Win32\SafeAuthzContextHandle.cs" />
     <Compile Include="Win32\SafeAuthzRMHandle.cs" />
     <Compile Include="Win32\SafeUserTokenHandle.cs" />
+    <Compile Include="Win32\SetHandleInformation.cs" />
     <Compile Include="Win32\StandardRights.cs" />
+    <Compile Include="Win32\StartupInfo.cs" />
     <Compile Include="Win32\Utils.cs" />
+    <Compile Include="Win32\WaitForSingleObject.cs" />
     <Compile Include="Win32\WindowsStationRights.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -124,6 +133,13 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
