--- a/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
+++ b/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
@@ -14,6 +14,8 @@
     <AssemblyName>IronFrame.Acceptance.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
