Update project reference to CreateProcess syscall
Signed-off-by: Amin Jamali <ajamali@pivotal.io>

--- a/IronFrame.Shared/IronFrame.Shared.csproj
+++ b/IronFrame.Shared/IronFrame.Shared.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Utilities\SafeJobObjectHandle.cs" />
     <Compile Include="Win32\EnvironmentBlock.cs" />
     <Compile Include="Win32\CreatePipe.cs" />
-    <Compile Include="Win32\CreateProcessAsUser.cs" />
+    <Compile Include="Win32\CreateProcessWithTokenW.cs" />
     <Compile Include="Win32\ProcessInformation.cs" />
     <Compile Include="Win32\SecurityAttributes.cs" />
     <Compile Include="Utilities\ProcessRunner.cs" />
