Vendor nuget packages
Signed-off-by: Ben Moss <bmoss@pivotal.io>

--- a/.nuget/NuGet.Config
+++ b/.nuget/NuGet.Config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <packageSources>
+    <add key="Vendored Packages" value="..\vendor" />
+    <add key="NuGet official package source" value="https://nuget.org/api/v2/" />
+  </packageSources>
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
