--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="Vendored Packages" value="..\vendor" />
+    <add key="Vendored Packages" value="vendor" />
     <add key="NuGet official package source" value="https://nuget.org/api/v2/" />
   </packageSources>
   <solution>
