Create a user profile for container users
The X509 support in .NET needs access to the user's registry in order to
manage keys.

[#119528819]

Signed-off-by: Ben Moss <bmoss@pivotal.io>

--- a/IronFrame.Shared/IronFrame.Shared.csproj
+++ b/IronFrame.Shared/IronFrame.Shared.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Win32\EnvironmentBlock.cs" />
     <Compile Include="Win32\CreatePipe.cs" />
     <Compile Include="Win32\CreateProcessWithTokenW.cs" />
+    <Compile Include="Win32\UserProfile.cs" />
     <Compile Include="Win32\ProcessInformation.cs" />
     <Compile Include="Win32\SecurityAttributes.cs" />
     <Compile Include="Utilities\ProcessRunner.cs" />
@@ -140,4 +141,3 @@
   </Target>
   -->
 </Project>
-
