--- a/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
+++ b/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="ContainerAcceptanceTests.cs" />
     <Compile Include="ContainerServiceAcceptanceTests.cs" />
+    <Compile Include="fixtures\x509app.cs" />
     <Compile Include="GuardAcceptanceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestSupport\FactAdminRequired.cs" />
@@ -113,4 +114,3 @@
   </Target>
   -->
 </Project>
-
