--- a/IronFrame/packages.config
+++ b/IronFrame/packages.config
@@ -4,4 +4,5 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
   <package id="SimpleImpersonation" version="1.0.1" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.2.0-beta1-build1144" targetFramework="net45" developmentDependency="true" />
 </packages>
