--- a/IronFrame.Shared/IronFrame.Shared.csproj
+++ b/IronFrame.Shared/IronFrame.Shared.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32\AccessCheck.cs" />
     <Compile Include="Win32\AccessMask.cs" />
+    <Compile Include="Win32\AdjustTokenPrivileges.cs" />
     <Compile Include="Win32\CloseHandle.cs" />
     <Compile Include="Win32\Console.cs" />
     <Compile Include="Win32\Constants.cs" />
